--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_splash">Splash</string>
     <string name="title_main_activity">My Alarms</string>
+    <color name="tap_color">#DBDBDB</color>
 
 </resources>
