--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,21 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_splash">Splash</string>
     <string name="title_main_activity">My Alarms</string>
+    <string name="desc_hint">Description</string>
+    <string name="title_hint">Title</string>
+    <string name="location_label">Location</string>
+    <string name="radius_label">Radius</string>
+    <string name="km_label">Km</string>
     <color name="tap_color">#DBDBDB</color>
+    <string name="sign_in">Sign in</string>
+    <string name="username">username</string>
+    <string name="password">password</string>
+    <string name="createaccount">Create Account</string>
+    <string name="lufb">Login using Facebook</string>
+    <string name="email">email@example.com</string>
+    <string name="confirmpassword">confirm password</string>
+    <string name="create">Create</string>
+    <string name="APP_ID">209567229179373</string>
+    <string name="createalarm">Create Alarm</string>
 
 </resources>
