--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,5 +22,10 @@
     <string name="APP_ID">209567229179373</string>
     <string name="createalarm">Create Alarm</string>
     <string name="details">Details</string>
+    <string name="settings">Settings</string>
+    <string name="tone">Tone</string>
+    <string name="stopLowBattery">Stop on Low Battery</string>
+    <string name="snooze">Snooze Time</string>
+    <string name="acsettings">Account Settings</string>
 
 </resources>
