--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,9 @@
     <string name="snooze">Snooze Time</string>
     <string name="acsettings">Account Settings</string>
     <string name="edit">Edit</string>
+    <string name="friends">My Friends</string>
+    <string name="add_friend">Add Friend</string>
+    <string name="name_hint">Nick</string>
+    <string name="alarms">Alarms</string>
 
 </resources>
